# podcasticot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  compose.yaml  datastore.py  endpoints.py  entities.py  main.py  podcast.py  podcast_service.py  pyproject.toml  requirements.txt  rss.py  server.py
business/: mp3.py  podcast.py  podcast_service.py  rss.py
k8s/: deployment.yml  ingress.yml  service.yml
persistence/: datastore.py
static/: expand_episode.js  hotkeys.js  play_on_swap.js  style.css  time_update.js
templates/: episode_details.html  feed.html  home.html  page_controls.html  player-control.html  podcast_home.html
tests/: test_podcast_service.py
