[project]
name = "podcasticot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.0",
    "feedparser==6.0.11",
    "flask>=2.0.3",
    "gunicorn==23.0.0",
    "python-dotenv>=0.19.2",
    "requests>=2.27.1",
    "werkzeug==3.1.3",
]
[dependency-groups]
dev = [
    "pytest==8.2.0",
    "ruff>=0.13.2",
]
